# NeuralNetwork

./: CMakeLists.txt  build.bat  build.sh
include/: Tensor.h
src/: Core.cpp  Tensor.cpp
test/: tensor_test.cpp
